hphp/hack/test/typecheck/dynamic/classname.php.exp
File "classname.php", line 5, characters 3-13:
  dynamic
File "classname.php", line 7, characters 3-13:
  dynamic
WARN: File "classname.php", line 4, characters 8-21:
Value of type `dynamic` called as a function (Warn[12039])
  File "classname.php", line 3, characters 34-40:
  This expression has type `dynamic`
ERROR: File "classname.php", line 6, characters 8-9:
It is no longer allowed to use a `classname<dynamic>` in this position. Please use a `class<dynamic>` instead. (Typing[4482])
  File "classname.php", line 3, characters 24-41:
  Definition is here
